# streamlit-extras

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Pipfile  README.md  gallery_app.py  generate.py  hatch_build.py  index.html  mkdocs.yml  netlify.toml  objects.inv  packages.txt  pyproject.toml  requirements.txt  setup.py  sitemap.xml  streamlit_app.py  streamlit_patches.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  improvement.yml  other.yml
.github/workflows/: linting.yml  publish_docs.yml  publish_pypi.yml  pypi.yml  pypi_action.yml  pypi_releases.yml  testing.yml
app/: requirements.txt  streamlit_patches.py
components/: index.html
components/annotated-text/: util.py
components/app_logo/: __init__.py
components/badges/: __init__.py  main.py
components/colored-header/: __init__.py  main.py
components/colored_header/: __init__.py  main.py
components/dataframe-explorer/: __init__.py  main.py
components/dataframe_explorer/: main.py
components/embed-code/: __init__.py
components/embed_code/: __init__.py
components/gui-gui-gui/: main.py
components/image-comparison/: __init__.py  main.py
components/image-in-tables/: __init__.py  main.py
components/image_in_tables/: __init__.py
components/keyboard-text/: main.py
components/keyboard_text/: __init__.py
components/keyboard_url/: __init__.py  main.py
components/let-it-rain/: __init__.py  main.py
components/stodo/: __init__.py
components/stoggle/: __init__.py
components/switch_page_button/: __init__.py
components/toc/: __init__.py  main.py
contributing/: index.html
credits/: index.html
docs/: components.md  contributing.md  generate.py  getting_started.md  index.md  requirements.txt
extras/add_vertical_space/: index.html
extras/altex/: index.html
extras/annotated_text/: __init__.py  index.html
extras/app_logo/: __init__.py  index.html
extras/avatar/: index.html
extras/badges/: __init__.py  index.html  main.py
extras/bottom_container/: index.html
extras/button_selector/: index.html
extras/buy_me_a_coffee/: index.html
extras/camera_input_live/: index.html
extras/capture/: index.html
extras/card/: index.html
extras/card_selector/: index.html
extras/chart_annotations/: index.html
extras/chart_container/: index.html
extras/chartjs_chart/: index.html
extras/colored_header/: __init__.py  index.html
extras/concurrency_limiter/: index.html
extras/cookie_manager/: index.html
extras/customize_running/: index.html
extras/dataframe_explorer/: index.html
extras/diagrams/: index.html
extras/directory_tree/: index.html
extras/echo_expander/: index.html
extras/embed_code/: index.html
extras/eval_javascript/: index.html
extras/exception_handler/: index.html
extras/faker/: index.html
extras/floating_button/: index.html
extras/function_explorer/: __init__.py  index.html
extras/great_tables/: index.html
extras/grid/: index.html
extras/image_compare_slider/: index.html
extras/image_coordinates/: index.html
extras/image_crop/: index.html
extras/image_in_tables/: index.html
extras/image_selector/: index.html
extras/json_editor/: index.html
extras/jupyterlite/: index.html
extras/keyboard_text/: __init__.py  index.html
extras/keyboard_url/: index.html
extras/let_it_rain/: __init__.py  index.html
extras/local_storage_manager/: index.html
extras/mandatory_date_range/: index.html
extras/markdownlit/: index.html
extras/mention/: index.html
extras/metric_cards/: index.html
extras/no_default_selectbox/: index.html
extras/pagination/: index.html
extras/pdf_viewer/: index.html
extras/prometheus/: index.html
extras/radial_menu/: index.html
extras/redirect/: index.html
extras/resizable_columns/: index.html
extras/row/: index.html
extras/sandbox/: index.html
extras/scroll_to_element/: index.html
extras/sigma_graph/: index.html
extras/skeleton/: index.html
extras/snowflake/: index.html
extras/specialized_inputs/: index.html
extras/st_keyup/: index.html
extras/star_rating/: index.html
extras/stateful_button/: index.html
extras/stateful_chat/: index.html
extras/steps/: index.html
extras/stodo/: __init__.py  index.html  main.py
extras/stoggle/: __init__.py  index.html
extras/streaming_write/: index.html
extras/streamlit_notify/: index.html
extras/stylable_container/: index.html
extras/switch_page_button/: index.html
extras/tags/: index.html
extras/theme/: index.html
extras/three_viewer/: index.html
extras/toggle_switch/: index.html
extras/vertical_slider/: index.html
extras/word_importances/: index.html
extras_deprecated/add_vertical_space/: index.html
extras_deprecated/app_logo/: index.html
extras_deprecated/button_selector/: index.html
extras_deprecated/colored_header/: index.html
extras_deprecated/image_in_tables/: index.html
extras_deprecated/no_default_selectbox/: index.html
extras_deprecated/row/: index.html
extras_deprecated/streaming_write/: index.html
extras_deprecated/stylable_container/: index.html
extras_deprecated/switch_page_button/: index.html
extras_deprecated/tags/: index.html
extras_deprecated/theme/: index.html
extras_deprecated/toggle_switch/: index.html
gallery/: requirements.txt  streamlit_app.py  streamlit_patches.py
getting_started/: index.html
overrides/: custom.css  main.html
scripts/: hatch_build.py
search/: search_index.json
src/streamlit_extras/: AGENTS.md  __init__.py  _compat.py  _component_utils.py  exception_handler.py  pyproject.toml  utils.py  version.py
streamlit_extras/annotated_text/: __init__.py
streamlit_extras/badges/: __init__.py
streamlit_extras/chart_annotations/: __init__.py
streamlit_extras/colored_header/: main.py
streamlit_extras/dataframe_explorer/: __init__.py
streamlit_extras/echo_expander/: __init__.py
streamlit_extras/embed_code/: __init__.py
streamlit_extras/function_explorer/: __init__.py
streamlit_extras/image_in_tables/: __init__.py  (+1 more)
tests/: test_extras.py  test_no_default_selectbox.py
(+182 files in other folders)
