[project]
name = "streamlit-extras"
version = "0.7.8"
license = "Apache-2.0"
description = "A library to discover, try, install and share Streamlit extras"
authors = [
  { name = "Arnaud Miribel", email = "arnaudmiribel@gmail.com" },
  { name = "Zachary Blackwood", email = "zachary@streamlit.io" },
]
readme = "README.md"
#packages = [{ include = "streamlit_extras", from = "src" }]
#exclude = ["gallery/"]
requires-python = ">=3.10,<3.14"
keywords = ["python", "streamlit", "ui", "data"]
dependencies = [
  "plotly >= 5.23.0",
  "streamlit >= 1.54.0",
]

[project.packages]
include = ["streamlit_extras"]
from = "src"
exclude = ["gallery/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest >= 7.4.4",
  "mypy >= 0.971",
  "pre-commit >= 3.0.0",
  "ruff >= 0.1.0",
  "types-requests",
  "types-python-dateutil",
  "types-pytz",
  "types-PyYAML",
  "types-toml",
]

[project.urls]
"Homepage" = "https://github.com/arnaudmiribel/streamlit-extras"
"Bug Tracker" = "https://github.com/arnaudmiribel/streamlit-extras/issues"


[tool.ruff]
exclude = [".git", ".vscode", ".pytest_cache", ".mypy_cache", ".env"]
line-length = 88

[tool.ruff.lint]
ignore = [
  "B008",
  "ISC001",
  "E501",
  "W191",
  "SIM102",
  "ERA001",
  "B018",
  "PT011",
  "PT018",
  "PT019",
]
select = [
  "B",
  "E",
  "F",
  "W",
  "I",
  "C4",
  "EXE",
  "ISC",
  "ICN",
  "PIE",
  "PT",
  "RET",
  "SIM",
  "ERA",
  "PLC",
  "ARG",
]

# line-length = 88

[tool.mypy]
files = ["**/*.py"]
follow_imports = "silent"
ignore_missing_imports = true
scripts_are_modules = true
python_version = "3.10"
